fixes checkboxes showing behind slider, fixes delete buton on admin page

--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,9 @@
     transform: rotate(360deg);
   }
 }
+.checkbox {
+  opacity: 0;
+}
 .switch {
   position: relative;
   display: inline-block;
